<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CIFDAQ Wallet</string>
    <string name="loading">Loading</string>
    <string name="alert">Alert</string>
    <string name="no_internet">Please check your internet connection</string>

    <string name="login">Login</string>
    <string name="import_wallet">Import your wallet from secret phrase</string>
    <string name="create_wallet">Create a new wallet</string>
    <string name="recover_wallet">Recover your wallet</string>
    <string name="incase_deleted_wallet">Incase of delete wallet</string>
    <string name="recover_wallet_tooltips_msg">You can recover wallet from your old secret recovery phrase</string>
    <string name="first_slide_desc">Get ready to unlock the potential of your digital assets with CIFDAQ wallet. Lets make managing digital assets simple and convenient.</string>
    <string name="first_slide_heading">Future Proof Crypto \nWallet</string>
    <string name="second_slide_heading">SECURE &amp; SAFE \nWALLET</string>
    <string name="second_slide_desc">Welcome to CIFDAQ wallet. Trust, security and innovation - all at your fingertips as you embark on this thrilling crypto adventure.</string>

    <string name="next">NEXT</string>
    <string name="send_otp">Send OTP</string>
    <string name="ok">OK</string>
    <string name="skip">Skip</string>
    <string name="delete">Delete</string>
    <string name="wallet_setup">WALLET SETUP</string>
    <string name="wallet_setup_desc">Create a new wallet or recover your existing one to start managing your digital assets easily.</string>
    <!--    <string name="wallet_setup_desc">Create a new account or recover your existing one to start managing your digital assets effortlessly. Your financial future awaits!</string>-->
    <string name="verify">Verify</string>
    <string name="create_your_wallet">SIGN UP</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_mobile">Enter mobile no</string>
    <string name="enter_password">Enter password</string>
    <string name="new_password">New password <font color='#FF0000'>*</font></string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Confirm password</string>
    <string name="pass_suggestion_msg">Password must be at least 8 characters. It includes 1 uppercase, 1 lowercase, 1 special character and 1 numeric character.</string>
    <string name="pass_correction_msg">Password must be at least 8 characters. \n- 1 uppercase. \n- 1 lowercase. \n- 1 special character. \n- 1 numeric character.</string>
    <string name="email_password_confirm_pass_wrong"> - Email is not valid. \n- Password is not valid. \n- Password and Confirm Password are not matching</string>
    <string name="email_password_wrong"> - Email is not valid. \n- Password is not valid.</string>
    <string name="pass_wrong_confirm_pass_not_match"> - Password is not valid. \n- Password and Confirm Password are not matching</string>
    <string name="email_wrong_confirm_pass_not_match"> - Email is not valid. \n- Password and Confirm Password are not matching</string>
    <string name="otp_suggestion">OTP should be 4 digit</string>
    <string name="otp_pass_confirm_pass_wrong"> - OTP should be 4 digit.\n- Password is not valid. \n- Password and Confirm Password are not matching</string>
    <string name="otp_pass_wrong"> - OTP should be 4 digit \n- Password is not valid.</string>
    <string name="otp_wrong_confirm_pass_not_match"> - OTP should be 4 digit \n- Password and Confirm Password are not matching</string>

    <string name="unique_id_suggestion_msg">if you are already a part of CIFDAQ family then you would have received a Unique ID in the email</string>
    <string name="otp_timer">OTP expires in: </string>
    <string name="email">Email Address <font color='#FF0000'>*</font></string>
    <string name="email_without_asteric">Email</string>
    <string name="show">Show</string>
    <string name="otp">OTP <font color='#FF0000'>*</font></string>
    <string name="mob_number">Mobile number (optional)</string>
    <string name="unique_id">Unique ID (optional)</string>
    <string name="enter_unique_id">Enter your unique id</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy and Policy</string>
    <string name="pass">Password <font color='#FF0000'>*</font></string>
    <string name="confirm_pass">Confirm password <font color='#FF0000'>*</font></string>
    <string name="otp_verification">Verify Your Identification</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="please_enter_otp">Please enter your OTP</string>
    <string name="otp_expired_msg">OTP has been expired. Click on resend button to get new otp</string>
    <string name="secret_recovery">Secret recovery phrase</string>
    <string name="old_secret_recovery">Old Secret recovery phrase</string>
    <string name="please_enter_phrase">Please enter your 12 words recovery phrase</string>
    <string name="user_not_found_by_phrase_msg">Please enter the correct seed phrase or user not yet registered</string>
    <string name="secret_recovery_desc">Please copy the secret recovery phrase in a safe place. This will be required for account recovery.</string>
    <string name="secret_recovery_delete_wallet_desc">Please copy the secret recovery phrase and private key in a safe place. This will be required for account recovery.</string>
    <string name="enter_secret_recovery_desc">Please enter your 12 words secret recovery phrase in the below text boxes.</string>
    <string name="congratulation_title">Congratulations ! \nYour Crypto Wallet is Ready !</string>
    <string name="congratulation_desc">Thank you for choosing CIFDAQ Wallet as your trusted companion to secure your digital assets.</string>
    <string name="welcome_back_desc">Your Wallet has been recovered successfully, Login to continue.</string>
    <string name="welcome_back_title">Welcome back</string>

    <string name="enter_password_desc">Enter your login credentials below to access your account securely</string>
    <string name="otp_send_msg">OTP send to your registered email</string>
    <string name="copy_to_clip">Copied to clipboard</string>
    <string name="send">Send</string>
    <string name="send_desc">Send crypto to other person</string>
    <string name="recieve">Receive</string>
    <string name="recieve_desc">Receive crypto from other person</string>
    <string name="skip_to_login_message">Want to use any feature in the application please follow the action below</string>
    <string name="receive_transaction">Receive CIFD</string>
    <string name="address_title">Address:</string>
    <string name="private_key_txt">Private Key:</string>
    <string name="send_transaction">Send CIFD</string>
    <string name="sender_address">Sender Address</string>
    <string name="receiver_address">Receiver Address<font color='#FF0000'> *</font></string>
    <string name="enter_recipient_address_hint">Enter receiver address</string>
    <string name="amount">Amount (in CIFD)<font color='#FF0000'> *</font></string>
    <string name="sent_amount_hint">Enter amount</string>
    <string name="gas">Gas</string>
    <string name="gas_limit">Gas Limit</string>
    <string name="vesting_release_title">Vesting Release Schedule</string>
    <string name="no_token_found">No Token Found</string>
    <string name="no_nft_found">Coming Soon…</string>
    <string name="no_activity_found">No Activity Found</string>
    <string name="account">Accounts</string>
    <string name="add_account">Add Account</string>
    <string name="create_new_account">Create a new account</string>
    <string name="not_another_account">You do not have another account so please create a new account</string>
    <string name="pass_confirm_pass_not_matching">Password and Confirm Password are not matching</string>
    <string name="email_not_valid">Email is not valid</string>

    <string name="your_receiver_address_wrong">Your receiver address is wrong.</string>
    <string name="you_cant_transfer_own_account">You can not transfer token into your own account.</string>
    <string name="you_cant_transfer_zero_value">You can not send transaction amount 0</string>
    <string name="you_cant_send_full_amount">You can not send your full unlocked balance.</string>
    <string name="you_cant_send_above_unlocked_amount">You can not send transaction due to insufficient balance.</string>
    <string name="entered_invalid_amount">You have entered invalid amount.</string>
    <string name="phrase_validate_successfully">Phrase successfully validated.</string>
    <string name="otp_verified_password_changed">OTP verified and Password successfully changed.</string>
    <string name="too_many_wrong_attempts">Too many wrong attempts, Your screen is locked for 60 seconds</string>
    <string name="terms_condition_agree_msg">Please read the terms and conditions and click the checkbox.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="activity">Activity</string>
    <string name="share_public_address">Share my public address</string>
    <string name="view_on_cifdaq_scan">View on CIFDAQ scan</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="request_feature">Request a feature</string>
    <string name="delete_wallet">Delete wallet</string>
    <string name="delete_wallet_upper_camel">Delete Wallet</string>
    <string name="proceed">Proceed</string>
    <string name="logout">Logout</string>
    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="transaction_failed">Transaction Failed!</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="confirm_delete_wallet">Confirm Delete Wallet</string>
    <string name="delete_alert">Are you sure you want to delete?</string>
    <string name="confirm_delete_alert"><font color='#FF0000'>It is unsafe to delete your wallet.  </font>\nAre you sure you want to delete?</string>
    <string name="delete_wallet_desc">Enter your password below to delete your wallet securely.</string>
    <string name="wallet_recovery">Wallet Recovery</string>
    <string name="email_tooltips_msg">You can enter your old / new email Id.</string>
    <string name="deleting_local_data_msg">Your wallet has been deleted from other device.</string>
    <string name="send_email_to_support">If you require any assistance or wish to report any issues, please send an email to the below email id, and our dedicated support team will promptly assist you. </string>
    <string name="support_thank_you"><font color='#FFFFFF'><big>Thank you for using our application!</big></font></string>
    <!--    <string name="support_email_id">monjoy.mitra@microblocklabs.com</string>-->
    <string name="support_email_id"><u>support@cifdaqwallet.com</u></string>
    <string name="account_name">Account Name <font color='#FF0000'> *</font></string>
    <string name="hint_enter_account_name">Enter account name</string>
    <!--    <string name="title_activity_fullscreen">FullscreenActivity</string>-->
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="text_please_read_terms_policy">Please Read Our </string>

</resources>