<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <group>-->
<!--        <item-->
<!--            android:id="@+id/nav_profile"-->
<!--            android:icon="@drawable/ic_profile"-->
<!--            android:title="Profile"/>-->
<!--        <item-->
<!--            android:id="@+id/nav_messages"-->
<!--            android:icon="@drawable/ic_messages"-->
<!--            android:title="Messages"/>-->
<!--        <item-->
<!--            android:id="@+id/nav_friends"-->
<!--            android:icon="@drawable/ic_friends"-->
<!--            android:title="Friends"/>-->
<!--    </group>-->


<!--    <item android:title="Account Settings">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_update"-->
<!--                android:icon="@drawable/ic_update"-->
<!--                android:title="Update Profile"/>-->
<!--            <item-->
<!--                android:id="@+id/nav_logout"-->
<!--                android:icon="@drawable/ic_signout"-->
<!--                android:title="Sign Out"/>-->
<!--        </menu>-->
<!--    </item>-->


    <item
        android:id="@+id/nav_activity"
        android:icon="@drawable/icon_activity"
        android:title="@string/activity"/>
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/icon_share"
        android:title="@string/share_public_address"/>
    <item
        android:id="@+id/nav_view"
        android:icon="@drawable/icon_eye"
        android:title="@string/view_on_cifdaq_scan"/>
<!--    <item-->
<!--        android:id="@+id/nav_settings"-->
<!--        android:icon="@drawable/icon_settings"-->
<!--        android:title="@string/settings"/>-->
    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/icon_support"
        android:title="@string/support"/>
<!--    <item-->
<!--        android:id="@+id/nav_request"-->
<!--        android:icon="@drawable/icon_req_feature"-->
<!--        android:title="@string/request_feature"/>-->
    <item
        android:id="@+id/nav_delete"
        android:icon="@drawable/icon_delete"
        android:title="@string/delete_wallet"/>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/icon_logout"
        android:title="@string/logout"/>

</menu>