<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/img_arrow_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:padding="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrow_back"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_app"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/cifdaq_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title_support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UnknownIdInLayout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/support"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/img_support"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/img_support"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="2dp"
        android:src="@drawable/support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_support"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/tv_email_forward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center"
        android:text="@string/send_email_to_support"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/img_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/support_email_id"
        android:textStyle="bold"
        android:background="@drawable/text_selector"
        android:fontFamily="@font/poppins_regular"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_forward" />


    <TextView
        android:id="@+id/tv_thank_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center"
        android:text="@string/support_thank_you"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_terms_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center"
        android:text="@string/text_please_read_terms_policy"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_terms_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="NotSibling" />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="30dp"
    android:gravity="center"
    app:layout_constraintTop_toBottomOf="@+id/tv_terms_policy"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/url_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center"
        android:text="@string/terms_conditions"
        android:textColor="@color/base_primary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_and"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center"
        android:text="and"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/url_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroy_medium"
        android:gravity="center"
        android:text="@string/privacy_policy"
        android:textColor="@color/base_primary"
        android:textSize="15sp" />

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>